--- a/appunti.html
+++ b/appunti.html
@@ -3265,11 +3265,159 @@ j = last
                                         class="arraycolsep" style="width:0.5em;"></span></span></span><span class="mclose nulldelimiter"></span></span></span></span></span></span></p>
     <p>abbiamo:</p>
     <center>
-        | Livello | Dim. | Costo chiam. | # chiamate | Costo livello |
-        | ------- | ----- | ------------ | ---------- | ------------- |
-        | $0$ | $n$ | $n^3$ | 1 | $n^3$ |
-        | $1$ | $n/2$ | $(n/2)^3$ | $4$ | $4(n/2)^3$ |
-        | ... | ... | ... | ... | ... |
+        <table>
+            <thead>
+                <tr>
+                    <th>Livello</th>
+                    <th>Dim.</th>
+                    <th>Costo chiam.</th>
+                    <th># chiamate</th>
+                    <th>Costo livello</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mn>0</mn>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">0</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">0</span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mi>n</mi>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">n</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.43056em;vertical-align:0em;"></span><span class="mord mathit">n</span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <msup>
+                                                <mi>n</mi>
+                                                <mn>3</mn>
+                                            </msup>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">n^3</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.8141079999999999em;vertical-align:0em;"></span><span
+                                        class="mord"><span class="mord mathit">n</span><span class="msupsub"><span
+                                                class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141079999999999em;"><span
+                                                            style="top:-3.063em;margin-right:0.05em;"><span class="pstrut"
+                                                                style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span
+                                                                    class="mord mtight">3</span></span></span></span></span></span></span></span></span></span></span></td>
+                    <td>1</td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <msup>
+                                                <mi>n</mi>
+                                                <mn>3</mn>
+                                            </msup>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">n^3</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.8141079999999999em;vertical-align:0em;"></span><span
+                                        class="mord"><span class="mord mathit">n</span><span class="msupsub"><span
+                                                class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141079999999999em;"><span
+                                                            style="top:-3.063em;margin-right:0.05em;"><span class="pstrut"
+                                                                style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span
+                                                                    class="mord mtight">3</span></span></span></span></span></span></span></span></span></span></span></td>
+                </tr>
+                <tr>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mn>1</mn>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">1</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">1</span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mi>n</mi>
+                                            <mi mathvariant="normal">/</mi>
+                                            <mn>2</mn>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">n/2</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathit">n</span><span
+                                        class="mord">/</span><span class="mord">2</span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mo>(</mo>
+                                            <mi>n</mi>
+                                            <mi mathvariant="normal">/</mi>
+                                            <mn>2</mn>
+                                            <msup>
+                                                <mo>)</mo>
+                                                <mn>3</mn>
+                                            </msup>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">(n/2)^3</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:1.064108em;vertical-align:-0.25em;"></span><span
+                                        class="mopen">(</span><span class="mord mathit">n</span><span class="mord">/</span><span
+                                        class="mord">2</span><span class="mclose"><span class="mclose">)</span><span
+                                            class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist"
+                                                        style="height:0.8141079999999999em;"><span style="top:-3.063em;margin-right:0.05em;"><span
+                                                                class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span
+                                                                    class="mord mtight">3</span></span></span></span></span></span></span></span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mn>4</mn>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">4</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:0.64444em;vertical-align:0em;"></span><span class="mord">4</span></span></span></span></td>
+                    <td><span class="katex"><span class="katex-mathml"><math>
+                                    <semantics>
+                                        <mrow>
+                                            <mn>4</mn>
+                                            <mo>(</mo>
+                                            <mi>n</mi>
+                                            <mi mathvariant="normal">/</mi>
+                                            <mn>2</mn>
+                                            <msup>
+                                                <mo>)</mo>
+                                                <mn>3</mn>
+                                            </msup>
+                                        </mrow>
+                                        <annotation encoding="application/x-tex">4(n/2)^3</annotation>
+                                    </semantics>
+                                </math></span><span class="katex-html" aria-hidden="true"><span class="base"><span
+                                        class="strut" style="height:1.064108em;vertical-align:-0.25em;"></span><span
+                                        class="mord">4</span><span class="mopen">(</span><span class="mord mathit">n</span><span
+                                        class="mord">/</span><span class="mord">2</span><span class="mclose"><span
+                                            class="mclose">)</span><span class="msupsub"><span class="vlist-t"><span
+                                                    class="vlist-r"><span class="vlist" style="height:0.8141079999999999em;"><span
+                                                            style="top:-3.063em;margin-right:0.05em;"><span class="pstrut"
+                                                                style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span
+                                                                    class="mord mtight">3</span></span></span></span></span></span></span></span></span></span></span></td>
+                </tr>
+                <tr>
+                    <td>...</td>
+                    <td>...</td>
+                    <td>...</td>
+                    <td>...</td>
+                    <td>...</td>
+                </tr>
+            </tbody>
+        </table>
     </center>
     <p>Una volta scritta la tabella si può tornare alla forma in sommatoria ed eventualmente gestire la complessità
         tramite un limite superiore o inferiore.</p>
