--- a/appunti.html
+++ b/appunti.html
@@ -549,12 +549,17 @@
                     <ul>
                         <li><a href="#metodo-dellesperto--delle-ricorrenze-comuni">Metodo dell'esperto / delle
                                 ricorrenze comuni</a></li>
-                        <li><a href="#strutture-dati">Strutture dati</a>
+                        <li><a href="#strutture-dati">Strutture dati</a></li>
+                        <li><a href="#esempi-di-tipi-di-dato-astratti">Esempi di tipi di dato astratti</a>
                             <ul>
                                 <li><a href="#sequenza">Sequenza</a></li>
                                 <li><a href="#insieme">Insieme</a></li>
                                 <li><a href="#dizionario">Dizionario</a></li>
                                 <li><a href="#alberi-e-grafi-introduzione">Alberi e grafi (introduzione)</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#strutture-dati-elementari">Strutture dati elementari</a>
+                            <ul>
                                 <li><a href="#lista">Lista</a></li>
                                 <li><a href="#pile-e-code">Pile e code</a></li>
                             </ul>
@@ -5852,6 +5857,7 @@ j = last
         specifica organizzazione. Sono divise in lineari / non lineari (con presenza di una sequenza); statiche /
         dinamiche (ovvero a seconda della variazione di dimensione e del contenuto) e infine omogenee / disomogenee (a
         seconda dei dati contenuti, se sono uguali o meno)</p>
+    <h3 id="esempi-di-tipi-di-dato-astratti">Esempi di tipi di dato astratti</h3>
     <h4 id="sequenza">Sequenza</h4>
     <p>Una struttura dati dinamica e lineare rappresentante una sequenza ordinata di valori, dove un valore può
         comparire una o più volte. Nei linguaggi di programmazione può essere implementata tramite un <em>vettore</em>
@@ -5962,6 +5968,7 @@ j = last
     <p>Un <strong>grafo</strong> è una struttura dati composta da un insieme di elementi detti <strong>nodi</strong> e
         un insieme di coppie di nodi detti <strong>archi</strong>.</p>
     <p>Tutte le operazioni ruotano intorno alla possibilità di effettuare visite.</p>
+    <h3 id="strutture-dati-elementari">Strutture dati elementari</h3>
     <h4 id="lista">Lista</h4>
     <p>Una sequenza di nodi contenenti dati e 1-2 puntatori agli elementi successivi e precedenti. I dati non devono
         essere necessariamente contigui in memoria e ogni operazione ha costo <span class="katex"><span class="katex-mathml"><math>
